# download-photos

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
photo_archive/: server.py  settings.py
server/: server.py
